[gd_scene load_steps=3 format=3 uid="uid://c2k61d5pgd0l5"]

[ext_resource type="Script" uid="uid://bj7nficxpdw4g" path="res://source/core/hud.gd" id="1_mixqu"]
[ext_resource type="Texture2D" uid="uid://cuxk2cjlxf1o0" path="res://assets/images/crosshair.png" id="2_2prs3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mixqu")

[node name="Crosshair" type="Control" parent="."]
texture_filter = 1
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 640.0
offset_top = 360.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Icon" type="Sprite2D" parent="Crosshair"]
texture = ExtResource("2_2prs3")

[node name="InteractionContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = 26.0
offset_right = 103.5
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InteractableContainer" type="HBoxContainer" parent="InteractionContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="InteractableName" type="Label" parent="InteractionContainer/InteractableContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractableMessage" type="Label" parent="InteractionContainer/InteractableContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionAction" type="Label" parent="InteractionContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 15
horizontal_alignment = 1
vertical_alignment = 1
